--- a/src/Components/Home/Summery/Summery.css
+++ b/src/Components/Home/Summery/Summery.css
@@ -1,24 +1,5 @@
-.facts-wrapper {
-    text-align: center;
-}
-
-.facts-wrapper .ts-facts {
-    color: #fff;
-}
-
-.ts-facts .ts-facts-icon i {
-    font-size: 42px;
+.icon,
+h2 {
     color: #ffb600;
-}
-
-.ts-facts .ts-facts-content .ts-facts-num {
-    color: #fff;
-    font-size: 44px;
-    margin: 30px 0 20px;
-}
-
-.ts-facts .ts-facts-content .ts-facts-title {
-    font-size: 16px;
-    color: #ffb600;
-    margin: 0;
+    font-weight: 700;
 }
