--- a/src/Components/Home/Who/Who.css
+++ b/src/Components/Home/Who/Who.css
@@ -33,17 +33,7 @@ blockquote.text-right:before {
     right: 5px;
 }
 
-blockquote:before {
-    content: "\f10d";
-    font-family: "Font Awesome 5 Free";
-    position: absolute;
-    font-size: 28px;
-    color: #E5E5E5;
-    top: 5px;
-    left: 5px;
-    font-weight: 700;
-    z-index: 0;
-}
+
 
 blockquote p {
     font-size: 14px;
@@ -53,3 +43,8 @@ blockquote p {
     font-style: italic;
     margin-bottom: 0;
 }
+
+/* .iconWho {
+    background-color: #ffb600;
+    border: 0px;
+} */
